--- a/BSplineInterpolation.dproj
+++ b/BSplineInterpolation.dproj
@@ -285,7 +285,6 @@
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D3x4x4.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4x4.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4x4x4.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\FMX\LUX.FMX.Graphics.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Data\Tree\LUX.Data.Tree.core.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Data\Tree\LUX.Data.Tree.Node.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Data\Tree\LUX.Data.Tree.pas"/>
@@ -297,6 +296,12 @@
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.Draw\LUX.Draw.Scene.pas"/>
+        <DCCReference Include="CurveChartFrame.pas">
+            <Form>CurveChart</Form>
+            <FormType>fmx</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="Core.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
