--- a/BSplineInterpolation.dproj
+++ b/BSplineInterpolation.dproj
@@ -302,6 +302,7 @@
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="Core.pas"/>
+        <DCCReference Include="GenPoins.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
