--- a/BSplineInterpolation.dproj
+++ b/BSplineInterpolation.dproj
@@ -301,8 +301,8 @@
             <FormType>fmx</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
-        <DCCReference Include="Core.pas"/>
         <DCCReference Include="GenPoins.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Curve\LUX.Curve.BSpline.D1.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
